Fixed toggle switch (light/dark mode) issue.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -165,7 +165,7 @@ header.hidden {
   }
 
   .toggle-switch input:checked~.ball {
-    transform: translateX(24px);
+    transform: translateX(25px);
   }
 
   .toggle-switch .ball {
